# R2-DB2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.disable  pyproject.toml  quickstart.ipynb
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/src/: AGENTS.md  main.py  settings.py
backend/src/graph/: __init__.py  builder.py  nodes.py  state.py
backend/src/graph/agents/: sql_agent.py
backend/src/integrations/: __init__.py
backend/src/integrations/clickhouse/: __init__.py  seed.py  seed_generators.py
backend/src/integrations/plotly/: __init__.py  chart_generator.py
backend/src/integrations/sql/: __init__.py  base.py  clickhouse_adapter.py  dialect_notes.py  mysql_adapter.py  postgres_adapter.py  registry.py  schema_catalog.py
backend/src/servers/: __init__.py
backend/src/servers/fastapi/: __init__.py  graph_routes.py  openai_routes.py
backend/tests/integrations/sql/: test_adapters.py  test_schema_catalog.py
docs/: AGENTS.md  R2-DB2_analysis.md  final-architecture-v2-plan.md  final-architecture.md  framework-comparison.md  implementation-plan.md  open-webui-setup.md  proposal-evaluation.md  report-output-plan.md
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: Chat.svelte  Composer.svelte  StatusBar.svelte  Transcript.svelte  api.ts
openwebui/: README.md  pipe_r2_db2_analyst.py  tool_download_report.py  tool_execute_sql.py
scripts/: AGENTS.md
src/: AGENTS.md  main.py  settings.py
src/graph/: builder.py  nodes.py  state.py
src/graph/agents/: __init__.py  _json.py  _llm.py  analysis_agent.py  intent_agent.py  sql_agent.py
src/integrations/clickhouse/: schema_catalog.py  seed_generators.py  seed_insert.py
src/integrations/plotly/: chart_generator.py
src/r2_db2/: AGENTS.md  __init__.py  main.py
src/r2_db2/capabilities/agent_memory/: base.py
src/r2_db2/capabilities/file_system/: base.py
src/r2_db2/capabilities/sql_runner/: base.py
src/r2_db2/components/: __init__.py  rich.py  simple.py  ui.py
src/r2_db2/components/rich/: __init__.py
src/r2_db2/components/rich/interactive/: ui_state.py
src/r2_db2/config/: __init__.py  settings.py
src/r2_db2/core/: __init__.py  errors.py  registry.py  validation.py
src/r2_db2/core/agent/: agent.py
src/r2_db2/core/audit/: __init__.py
src/r2_db2/core/evaluation/: __init__.py  base.py  dataset.py  evaluators.py  runner.py
src/r2_db2/core/llm/: __init__.py
src/r2_db2/core/report/: __init__.py  models.py  service.py
src/r2_db2/core/storage/: __init__.py
src/r2_db2/core/system_prompt/: __init__.py  default.py
src/r2_db2/core/tool/: __init__.py  models.py
src/r2_db2/core/user/: __init__.py  request_context.py
src/r2_db2/core/workflow/: base.py  default.py
src/r2_db2/graph/: __init__.py  builder.py  nodes.py  state.py
src/r2_db2/integrations/: __init__.py
src/r2_db2/integrations/clickhouse/: __init__.py  seed.py  seed_generators.py  seed_schema.py  sql_runner.py
src/r2_db2/integrations/local/: audit.py  file_system.py  file_system_conversation_store.py  storage.py
src/r2_db2/integrations/local/agent_memory/: in_memory.py
src/r2_db2/integrations/plotly/: chart_generator.py
src/r2_db2/integrations/postgres/: sql_runner.py
src/r2_db2/integrations/qdrant/: __init__.py  agent_memory.py
src/r2_db2/servers/: __init__.py  __main__.py
src/r2_db2/servers/base/: __init__.py
src/r2_db2/servers/cli/: __init__.py  server_runner.py
src/r2_db2/servers/fastapi/: __init__.py  app.py  graph_routes.py  openai_models.py  openai_routes.py  routes.py
src/r2_db2/tools/: __init__.py  agent_memory.py  file_system.py  python.py  run_sql.py  visualize_data.py
src/report/: __init__.py  models.py  service.py
src/servers/fastapi/: graph_routes.py  openai_models.py  openai_routes.py
tests/: AGENTS.md  __init__.py  conftest.py  test_capabilities.py  test_config_settings.py  test_core_compat.py  test_core_component_manager.py  test_core_components.py  test_core_errors.py  test_core_models.py  test_core_plugins.py  test_core_registry.py  test_core_report.py  test_core_validation.py  test_core_workflow.py  test_e2e_openwebui.py  test_headless_agent.py  test_integrations_local.py  test_integrations_plotly.py  test_integrations_postgres.py  test_integrations_qdrant.py  test_openai_streaming.py  test_pipe_streaming.py  test_report_output.py  test_servers_fastapi.py  test_tools.py
