[project]
name = "r2-db2"
version = "2.0.2"
authors = [
  { name="", email=""},
]

description = "Generate SQL queries from natural language"
readme = "README.md"
requires-python = ">=3.13.9"

dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "click>=8.3.1",
    "pandas",
    "httpx",
    "PyYAML",
    "plotly",
    "tabulate",
    "sqlparse",
    "sqlalchemy",
    "requests",
    "langchain>=1.2.10",
    "langchain-core>=1.2.15",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-checkpoint-redis>=0.3.5",
    "psycopg[binary]>=3.3.3",
    "clickhouse-connect>=0.11",
    "faker>=20.0",
    "smolagents[openai,toolkit,mcp,blaxel,e2b,docker]>=1.24.0",
    "langfuse>=3.14.5",
    "weasyprint>=68.1",
    "fastapi>=0.133.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
r2-db2 = "r2-db2.servers.cli.server_runner:main"


[project.optional-dependencies]

fastapi = ["fastapi>=0.135.1", "uvicorn>=0.41.0"]

postgres = ["psycopg2-binary", "db-dtypes", "langchain-postgres>=0.0.12"]
redis = ["redis"]
qdrant = ["qdrant-client>=1.17.0"]
clickhouse = ["clickhouse_connect"]
report = [
    "pyarrow>=15.0",
]


[tool.flit.module]
name = "r2-db2"
path = "src/r2-db2"

[tool.flit.sdist]
exclude = [
    "frontends/",
    "tests/",
    "notebooks/",
    ".github/",
    "tox.ini",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "anthropic: marks tests requiring Anthropic API key",
    "openai: marks tests requiring OpenAI API key",
    "postgres: marks tests requiring PostgreSQL",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
# Set the target Python version
target-version = "py313"

# Set line length to 88 (Black's default)
line-length = 88

# Enable auto-fixing
fix = false

# Exclude common directories
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[[tool.uv.index]]
name = "private"
url = "https://pypi.org/simple"
default = true


[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    # "I",   # isort (disabled - use `ruff check --fix` to auto-fix import sorting)
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    # Formatting/style (handled by formatter or not critical)
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file
    "E731",  # lambda assignment
    "E741",  # ambiguous variable name
    "W291",  # trailing whitespace
    "W293",  # blank line with whitespace

    # Naming conventions (legacy compatibility)
    "N801",  # invalid class name
    "N802",  # function name should be lowercase
    "N803",  # argument name should be lowercase
    "N805",  # invalid first argument name for method
    "N806",  # variable in function should be lowercase
    "N818",  # error suffix on exception name
    "N999",  # invalid module name

    # Unused/redefined (often intentional)
    "F401",  # imported but unused
    "F541",  # f-string missing placeholders
    "F811",  # redefinition of unused name
    "F841",  # unused variable

    # Bugbear rules (opinionated or intentional)
    "B006",  # mutable argument default (sometimes needed)
    "B007",  # unused loop control variable
    "B008",  # do not perform function calls in argument defaults
    "B024",  # abstract base class without abstract method
    "B027",  # empty method without abstract decorator
    "B904",  # raise without from inside except (intentional in legacy code)
    "B905",  # zip without explicit strict

    # Comprehension/collection style
    "C408",  # unnecessary collection call
    "C416",  # unnecessary comprehension

    # Simplification suggestions (all SIM rules - opinionated style)
    "SIM102", # collapsible if
    "SIM103", # needless bool
    "SIM105", # suppressible exception
    "SIM108", # if-else block instead of if-exp
    "SIM110", # reimplemented builtin
    "SIM114", # if with same arms
    "SIM117", # multiple with statements
    "SIM118", # in dict keys
    "SIM401", # if-else block instead of dict get
    "SIM910", # dict get with none default
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect line endings
line-ending = "auto"
